--- a/9/GrainUnitTests/GrainUnitTests.csproj
+++ b/9/GrainUnitTests/GrainUnitTests.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Microsoft.Orleans.TestingHost" Version="3.4.0-rc1" />
     <PackageReference Include="Moq" Version="4.15.2" />
+    <PackageReference Include="OrleansTestKit" Version="3.1.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
