--- a/.github/workflows/solution7.yml
+++ b/.github/workflows/solution7.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./7
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -17,7 +20,7 @@ jobs:
       with:
         dotnet-version: 5.0.101
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore  
     - name: Build
       run: dotnet build --no-restore
     - name: Test
